commit on common methods